--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ build/
 .env.development.local
 .env.test.local
 .env.production.local
+.env1.example
 
 # 日志文件
 logs
@@ -62,3 +63,9 @@ $RECYCLE.BIN/
 # 临时文件
 *.tmp
 *.temp
+
+# change log
+CHANGE_LOG.md
+
+# Read Me
+README.md
