--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
     "vite": "^4.4.5"
   }
 }
