--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
-# 依赖目录 - 这是最重要的！
+# Node modules
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# 构建输出
+# frontend dist
 dist/
 build/
 *.tgz
 *.tar.gz
 
-# 环境变量文件（包含敏感信息）
+# environment files
 .env
 .env.local
 .env.development.local
@@ -18,28 +18,28 @@ build/
 .env.production.local
 .env1.example
 
-# 日志文件
+# logs
 logs
 *.log
 
-# 运行时数据
+# PID
 pids
 *.pid
 *.seed
 *.pid.lock
 
-# 代码覆盖率
+# test coverage
 coverage/
 .nyc_output
 
-# 依赖目录的缓存
+# npm related
 .npm
 .eslintcache
 
-# 可选编译缓存
+# Next.js
 .nuxt
 
-# 特定IDE文件
+# IDE
 # VSCode
 .vscode/
 !.vscode/extensions.json
@@ -47,7 +47,7 @@ coverage/
 # WebStorm
 .idea/
 
-# 系统文件
+# OS
 .DS_Store
 .DS_Store?
 ._*
@@ -56,11 +56,11 @@ coverage/
 ehthumbs.db
 Thumbs.db
 
-# 操作系统文件夹
+# Windows
 Desktop.ini
 $RECYCLE.BIN/
 
-# 临时文件
+# Temp
 *.tmp
 *.temp
 
@@ -69,3 +69,36 @@ CHANGE_LOG.md
 
 # Read Me
 README.md
+
+# Virtual environments
+venv/
+env/
+ENV/
+.venv/
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+*.pyc
+*.pyo
+*.pyd
